--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,17 @@
       <div class="panel-body" id = "main">Reddit Scraper</div>
       <div id = "articles"></div>
       <div id = "notes"></div>
+      <!-- <div class="row">
+        <div class="panel panel-default">
+          <div class = "panel-heading">
+          <div id = "title"></div>
+        </div>
+        <div class="panel-body">
+          <div id = "link"></div>
+        </div>
+        <div id = "notes"></div>
+      </div>
+    </div> -->
 
     <div class="panel panel-default" id = "footer">  © 2017 Erika Yardumian </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
