--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
             </div>
           </div>
         </div>
-      <div class="panel-body" id = "main">Reddit Scraper</div>
+      <div class="panel-body" id = "main">OC Register Scraper</div>
       <div id = "articles"></div>
       <div id = "notes"></div>
       <!-- <div class="row">
