--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Cinzel|Crete+Round|Indie+Flower|Patua+One" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+
+    <link href="https://fonts.googleapis.com/css?family=Cinzel|Crete+Round|Indie+Flower|Patua+One" rel="stylesheet">
+
     <title>News Fit To Scrape</title>
   </head>
   <body>
@@ -21,7 +24,8 @@
                 <a class="dropdown-item" href="/">Home</a>
                 <br>
                 <a class="dropdown-item" href="/scrape">Scrape New Articles</a>
-                <!-- <a class="dropdown-item" href="#">Saved Articles</a> -->
+                <br>
+                <a class="dropdown-item" href="/articles/:id">Saved Articles</a>
               </div>
             </div>
           </div>
@@ -29,20 +33,9 @@
       <div class="panel-body" id = "main">OC Register Scraper</div>
       <div id = "articles"></div>
       <div id = "notes"></div>
-      <!-- <div class="row">
-        <div class="panel panel-default">
-          <div class = "panel-heading">
-          <div id = "title"></div>
-        </div>
-        <div class="panel-body">
-          <div id = "link"></div>
-        </div>
-        <div id = "notes"></div>
-      </div>
-    </div> -->
-
+      <div id = "savedNotes"></div>
     <div class="panel panel-default" id = "footer">  © 2017 Erika Yardumian </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
     <script src="app.js"></script>
   </body>
 </html>
