--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,8 @@
                 <a class="dropdown-item" href="/">Home</a>
                 <br>
                 <a class="dropdown-item" href="/scrape">Scrape New Articles</a>
-                <br>
-                <a class="dropdown-item" href="/articles/:id">Saved Articles</a>
+                <!-- <br>
+                <a class="dropdown-item" href="/articles/:id">Saved Articles</a> -->
               </div>
             </div>
           </div>
